# Nico

./: .gitignore  README.md  adb_uiautomation.py  common.py  find_ui_element.py  get_root_xml.py  get_uiautomator_xml.py  pyproject.toml  setup.py  test.py  test2.py  test3.py
.github/workflows/: python-package.yml
AutoNico.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
adb_uiautomator/: __init__.py  adb_uiautomator.py  common.py  find_ui_element.py  get_uiautomator_xml.py  logger_config.py  nico.py  nico_proxy.py  test.py  ui_object.py  ui_object2.py  utils.py
adb_uiautomator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
adb_uiautomator/libs/: adb_uiautomator-1.0.1-py3-none-any.whl  start_auto.sh
aki22.egg-info/: PKG-INFO  SOURCES.txt
auto_nico/: adb_utils.py  dump_ui.py  get_uiautomator_xml.py  nico.py  nico_element.py  nico_image.py  nico_proxy.py  send_request.py
auto_nico/android/: adb_utils.py  nico_android.py  nico_android_element.py  nico_image.py
auto_nico/common/: common_utils.py  error.py  kmeans_run.py  logger_config.py  nico_basic.py  nico_basic_element.py  nico_element.py  nico_proxy.py  running_info.py  runtime_cache.py  send_request.py
auto_nico/console_scripts/: dump_ui.py  screenshot.py  uninstall_apk.py
auto_nico/ios/: XCUIElementType.py  idb_utils.py  nico_image.py  nico_ios.py  nico_ios_element.py
auto_nico/libs/: android_test.apk
nico/: get_uiautomator_xml.py  logger_config.py  nico.py  nico_element.py  nico_image.py  nico_proxy.py  send_request.py  utils.py
nico.egg-info/: PKG-INFO  SOURCES.txt
(+47 files in other folders)
